err/django-kong.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_kong-0.9.egg-info'...
Listing './lib/python3.5/site-packages/kong'...
Listing './lib/python3.5/site-packages/kong/management'...
Listing './lib/python3.5/site-packages/kong/management/commands'...
Compiling './lib/python3.5/site-packages/kong/management/commands/check_sites.py'...
***   File "./lib/python3.5/site-packages/kong/management/commands/check_sites.py", line 25
    print "Running test: %s" % TEST
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kong/templates'...
Listing './lib/python3.5/site-packages/kong/templates/kong'...
Listing './lib/python3.5/site-packages/kong/templatetags'...
Listing './lib/python3.5/site-packages/kong/tests'...
Compiling './lib/python3.5/site-packages/kong/tests/model_tests.py'...
***   File "./lib/python3.5/site-packages/kong/tests/model_tests.py", line 39
    print "WARNING: Skipping online tests. Set KONG_RUN_ONLINE_TESTS to True in your settings to run them"
                                                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kong/utils.py'...
***   File "./lib/python3.5/site-packages/kong/utils.py", line 57
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
